# ESKY

./: README.md  dependencies.gradle  gradle.properties  settings.gradle
CommonLib/: build.gradle  proguard-rules.pro
app/: CMakeLists.txt  build.gradle  esky.jks
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/bhesky/app/: IGuardAidlInterface.aidl
app/src/main/cpp/: native-lib.cpp  native-lib.cpp.copy  native_lib.h.copy  readme
app/src/main/java/com/bhesky/app/: LoginActivity.java  MainActivity.java  ProcessService.java  SqliteActivity.java  Watcher.java
app/src/main/java/com/bhesky/app/base/: KYApplication.java
app/src/main/java/com/bhesky/app/bean/: Teacher.java  User.java  UserDao.java
app/src/main/java/com/bhesky/app/mvp/view/: ILoginView.java
app/src/main/java/com/bhesky/app/services/: LocalService.java  ProcessService.java  RemoteService.java  Watcher.java
app/src/main/java/com/bhesky/app/ui/: BaseMvpActivity.java  LoginActivity.java  MainActivity.java  SplashActivity.java
app/src/main/java/com/bhesky/app/ui/test/: SqliteActivity.java
app/src/main/java/com/bhesky/app/utils/: FileUtils.java  ReflectUtils.java
app/src/main/java/com/bhesky/app/utils/sqlite/: BaseDao.java  BaseDaoFactory.java  DaoFactory.java  IBaseDao.java  MySQLiteOpenHelper.java  Utils.java
app/src/main/java/com/bhesky/app/wedigts/: CommonTitleLayout.java
app/src/main/res/drawable/: go_back_img.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  activity_sqlite.xml  title_layout.xml
app/src/main/res/values/: strings.xml  styles.xml
(+181 files in other folders)
